Update to 1.19.2, clean and format code